PR target/55143: undefined reference to c_default_pointer_mode

for all-gcc on ia64-hp-vms

gcc/c/ChangeLog:

2015-04-10  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	PR target/55143
	* c-decl.c (c_default_pointer_mode): Remove definition.
	* c-tree.h (c_default_pointer_mode): Remove declaration.

gcc/c-family/ChangeLog:

2015-04-10  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	PR target/55143
	* c-common.c (c_default_pointer_mode): Add definition.
	* c-common.h (c_default_pointer_mode): Add declaration.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@221968 138bc75d-0d04-0410-961f-82ee72b054a4