gcc/c/c-tree.h
@@ -671,10 +671,6 @@ extern int current_function_returns_null;
 
 extern int current_function_returns_abnormally;
 
-/* Mode used to build pointers (VOIDmode means ptr_mode).  */
-
-extern machine_mode c_default_pointer_mode;
-
 /* In c-decl.c */
 
 /* Tell the binding oracle what kind of binding we are looking for.  */
